<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical" android:layout_weight="0.67">

        <TextView
            android:id="@+id/txtSolution"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:gravity="right"
            android:paddingEnd="10sp"
            android:paddingTop="5sp"
            android:textSize="15pt"
            android:textStyle="bold"
            tools:ignore="NestedWeights,RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/txtInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="10sp"
            android:paddingTop="5sp"
            android:textSize="15pt"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="5"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/ac"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight=".51"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/clear"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/_7"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/_8"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/_9"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight=".60"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/divide"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/_4"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/_5"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/_6"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight=".60"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/multiply"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/_1"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/_2"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/_3"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight=".60"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/subtract"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1.22"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/point" />


        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight=".98"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/zero"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnEquals"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight=".95"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/equal"
            tools:ignore="ButtonStyle" />


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight=".93"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/add"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>